--- a/.github/workflows/az_login.yml
+++ b/.github/workflows/az_login.yml
@@ -8,7 +8,14 @@ jobs:
   upload:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: azure/login@v1
-      with:
-          creds: ${{ secrets.AZURE_SERVICE_PRINCIPLE }}
+      - uses: actions/checkout@v2
+      - name: create test file
+        working-directory: doc
+        run: |
+            mkdir test_folder
+            echo "test file from workflow" >> test_folder/test_file.txt
+      - uses: bacongobbler/azure-blob-storage-upload@main
+        with:
+          source_dir: doc/test_folder
+          container_name: gsl-test-container
+          connection_string: ${{ secrets.AZURE_CONNECTION_STRING }}
