--- a/.github/workflows/docbuild.yml
+++ b/.github/workflows/docbuild.yml
@@ -104,3 +104,44 @@ jobs:
         with:
           name: cache
           path: ncs/nrf/cache
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v2
+        with:
+          name: cache
+          path: cache
+          
+      - name: Prepare documentation upload
+        working-directory: cache
+        run: |
+          # don't do anything if monitor.txt doesn't exist (no publish)
+          if [[ ! -f "extra/monitor.txt" ]]; then
+            exit 0
+          fi
+
+          # decompress cache files
+          for f in *.zip; do
+            unzip "$f"
+          done
+
+          # compress HTML files
+          mkdir upload && cd upload
+          mv ../extra/index.html ../html
+          mv ../extra/versions.json ../html
+          tar -C ../html -zcf "doc_build_${GITHUB_RUN_ID}.tgz" .
+
+          # prepare request file
+          mv ../extra/monitor.txt monitor_${GITHUB_RUN_ID}.txt
+          sed -i "s/__FILE__/doc_build_${GITHUB_RUN_ID}.tgz/g" monitor_${GITHUB_RUN_ID}.txt
+
+      - uses: bacongobbler/azure-blob-storage-upload@main
+        with:
+          source_dir: cache
+          container_name: ncs-doc-staging
+          connection_string: ${{ secrets.AZURE_CONNECTION_STRING }}
+          overwrite: 'true'
